add texture, update project files
texture sudah tampil tapi belum benar.
file-file dalam folder project diperbaharui supaya bisa langsung dirun.

--- a/TugasRancang/TugasRancang/TugasRancang.vcxproj.filters
+++ b/TugasRancang/TugasRancang/TugasRancang.vcxproj.filters
@@ -15,7 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="TR.cpp">
+    <ClCompile Include="TR.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="imageloader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Woman1.bmp">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
